--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" />
+    <link rel="icon" type="http://unlockdesizn.com/html/non-profit/be-ahand/demo/images/header-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <!-- aos animation -->
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
